--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "auto-update-example",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "electron auto update example",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron .",
-    "build": "electron-builder build --linux  --publish never",
-    "deploy": "electron-builder build --linux --publish always"
+    "build": "electron-builder build --win  --publish never",
+    "deploy": "electron-builder build --win --publish always"
   },
   "author": "Omar Ahmed<omarmone0@gmail.com>",
   "license": "ISC",
@@ -28,6 +28,12 @@
       "target": [
         "deb"
       ],
+      "publish": [
+        "github"
+      ]
+    },
+    "win": {
+      "target": "nsis",
       "publish": [
         "github"
       ]
