--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "auto-update-example",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "electron auto update example",
   "main": "main.js",
   "scripts": {
@@ -16,6 +16,7 @@
     "electron-builder": "^22.8.0"
   },
   "dependencies": {
+    "electron-log": "^4.2.4",
     "electron-updater": "^4.3.4"
   },
   "repository": {
